default.html: GA: doesn't need to be async, apparently, so can fully defer it to help HTML rendering perf

--- a/template/default.html
+++ b/template/default.html
@@ -183,7 +183,7 @@
     if (!justified) { document.body.classList.remove("justified"); document.body.classList.add("justified-not"); }
     </script>
 
-    <script async id="googleAnalytics" src="https://www.googletagmanager.com/gtag/js?id=UA-18912926-1" onload="GW.googleAnalyticsLoaded = true;"></script>
+    <script defer id="googleAnalytics" src="https://www.googletagmanager.com/gtag/js?id=UA-18912926-1" onload="GW.googleAnalyticsLoaded = true;"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
