--- a/css/default.css
+++ b/css/default.css
@@ -3305,19 +3305,6 @@ body.lorem div[class^='drop-cap'] {
     margin: 1em 0 0 0;
 }
 
-/****************************/
-/* DIRECTORY INDEX LISTINGS */
-/****************************/
-/* trim down appearance of UI elements not useful on listing pages (but without the other modifications for the primary /index. */
-
-body.index-directory #sidebar a.patreon,
-body.index-directory #page-tags,
-body.index-directory #page-metadata-block,
-body.index-directory #TOC,
-body.index-directory #navigation,
-body.index-directory #footer {
-    display: none;
-}
 
 /*************************/
 /* UI ELEMENTS CONTAINER */
@@ -3335,6 +3322,96 @@ body.index-directory #footer {
 #ui-elements-container > * {
     pointer-events: auto;
 }
+
+
+/****************/
+/* PAGE TOOLBAR */
+/****************/
+
+#page-toolbar > button {
+	appearance: none;
+	border: none;
+	background-color: transparent;
+    padding: 0;
+    margin: 0;
+    font-size: inherit;
+    font-family: inherit;
+    font-weight: inherit;
+    color: var(--GW-page-toolbar-button-color);
+}
+#page-toolbar > button svg {
+    display: block;
+}
+
+#page-toolbar.mobile .buttons:empty ~ * {
+	display: none;
+}
+
+#page-toolbar.mobile > button.collapse-button {
+    order: -1;
+    padding: 0 12px;
+    outline: 1px dotted currentColor;
+    background-color: var(--GW-body-background-color);
+    transition: 
+        opacity 0.25s ease-out 0.25s;
+}
+#page-toolbar.mobile > button.collapse-button:active {
+    color: var(--GW-page-toolbar-button-active-color);
+}
+#page-toolbar.mobile > button.main-toggle-button {
+    order: 1;
+    transition: 
+        opacity 0.25s ease-out,
+        transform 0.25s ease-out;
+}
+#page-toolbar.mobile > button.main-toggle-button:active {
+	transform: scale(0.95);
+}
+
+#page-toolbar.mobile {
+    position: fixed;
+    display: flex;
+    flex-flow: column;
+    width: 2.5em;
+    align-items: stretch;
+    bottom: 0.5em;
+    right: 0.5em;
+}
+#page-toolbar.mobile .buttons {
+    margin: 0.5em 0 0.75em 0;
+    display: flex;
+    flex-flow: column;
+    align-items: stretch;
+    transform-origin: bottom;
+    transition:
+    	transform 0.25s ease-out;
+}
+#page-toolbar.mobile .buttons .button-group {
+    padding: 2px 0;
+	outline: 1px dotted var(--GW-page-toolbar-border-color);
+}
+#page-toolbar.mobile .buttons > * + * {
+    margin-top: 0.5em;
+}
+
+#page-toolbar.mobile.collapsed > .collapse-button {
+    opacity: 0;
+    transition: 
+        opacity 0.25s ease-out;
+}
+#page-toolbar.mobile.collapsed > button.main-toggle-button {
+    opacity: 0.65;
+    transform: rotateZ(-0.25turn);
+}
+#page-toolbar.mobile.collapsed > button.main-toggle-button:active {
+    transform: rotateZ(-0.25turn) scale(0.95);
+}
+
+#page-toolbar.mobile.collapsed .buttons {
+    transform: translateY(calc(100% + 5em));
+    transform: rotateX(0.25turn);
+}
+
 
 /***************/
 /* IMAGE FOCUS */
@@ -6542,6 +6619,9 @@ ol.link-bibliography-list-compact > li::before {
     #ui-elements-container .reader-mode-selector button {
         border-width: 5px 3px 1px 3px;
     }
+    #ui-elements-container .reader-mode-selector button::before {
+        top: 1px;
+    }
 }
 
 /******************/
@@ -6636,37 +6716,36 @@ ol.link-bibliography-list-compact > li::before {
 /*  Fixed mode selectors.
  */
 
-#ui-elements-container .mode-selector {
-    position: absolute;
-    display: flex;
-    box-sizing: content-box;
-    margin: 3px;
-    opacity: 0.3;
-    transition:
-        opacity 2s ease;
-}
-#ui-elements-container .mode-selector:hover {
-    transition: none;
-    opacity: 1.0;
-}
-#ui-elements-container .mode-selector.hidden {
-    opacity: 0;
-}
+@media only screen and (min-width: 650px) {
+	#ui-elements-container .mode-selector {
+		position: absolute;
+		display: flex;
+		box-sizing: content-box;
+		margin: 3px;
+		opacity: 0.3;
+		transition:
+			opacity 2s ease;
+	}
+	#ui-elements-container .mode-selector.hidden {
+		opacity: 0;
+	}
 
-@media only screen and (hover: hover) {
-    #ui-elements-container .mode-selector {
-        outline: 3px solid transparent;
-    }
-    #ui-elements-container .mode-selector:hover {
-        outline: 3px double var(--GW-mode-selector-border-hover-color);
-    }
+	@media only screen and (hover: hover) {
+		#ui-elements-container .mode-selector {
+			transition: none;
+			opacity: 1.0;
+			outline: 3px solid transparent;
+		}
+		#ui-elements-container .mode-selector:hover {
+			outline: 3px double var(--GW-mode-selector-border-hover-color);
+		}
+	}
+	@media only screen and (hover: none) {
+		#ui-elements-container .mode-selector {
+			outline: 1px dotted var(--GW-mode-selector-border-hover-color);
+		}
+	}
 }
-@media only screen and (hover: none) {
-    #ui-elements-container .mode-selector {
-        outline: 1px dotted var(--GW-mode-selector-border-hover-color);
-    }
-}
-
 @media only screen and (max-width: 1534px) {
     #ui-elements-container .mode-selector {
         flex-flow: column;
@@ -6679,7 +6758,6 @@ ol.link-bibliography-list-compact > li::before {
 }
 @media only screen and (max-width: 1279px) {
     #ui-elements-container .mode-selector {
-        background-color: var(--GW-mode-selector-mobile-background-color);
         opacity: 1.0;
     }
     #ui-elements-container .mode-selector button {
@@ -6709,19 +6787,29 @@ ol.link-bibliography-list-compact > li::before {
         color: transparent;
     }
 }
+
 @media only screen and (max-width: 649px) {
     #ui-elements-container .mode-selector {
-        top: unset;
         padding: 0;
+        display: flex;
+        flex-flow: column;
+        align-items: stretch;
     }
     #ui-elements-container .mode-selector button {
-        width: 3em;
-        height: 3em;
-        border-style: solid;
-        border-color: transparent;
+        width: unset;
+        height: 45px;
     }
     #ui-elements-container .mode-selector button + button {
-        margin-top: 0;
+        margin: 0;
+    }
+    #ui-elements-container .mode-selector button::before {
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        padding: 7px;
+        box-sizing: border-box;
+        background-origin: content-box;
     }
 }
 
