--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -3423,18 +3423,22 @@ GW.scrollState = {
 };
 
 function updateScrollState(event) {
-    GWLog("updateScrollState", "gw.js", 3);
+    GWLog("updateScrollState", "inline.js", 3);
 
-    GW.newScrollTop = (window.pageYOffset || document.documentElement.scrollTop);
-    GW.scrollState.unbrokenDownScrollDistance = (GW.newScrollTop > GW.scrollState.lastScrollTop)
-        ? (GW.scrollState.unbrokenDownScrollDistance + GW.newScrollTop - GW.scrollState.lastScrollTop)
-        : 0;
-    GW.scrollState.unbrokenUpScrollDistance = (GW.newScrollTop < GW.scrollState.lastScrollTop)
-        ? (GW.scrollState.unbrokenUpScrollDistance + GW.scrollState.lastScrollTop - GW.newScrollTop)
-        : 0;
-    GW.scrollState.lastScrollTop = GW.newScrollTop;
+    GW.scrollState.newScrollTop = window.pageYOffset;
+    GW.scrollState.unbrokenDownScrollDistance = GW.scrollState.newScrollTop > GW.scrollState.lastScrollTop
+        										? (  GW.scrollState.unbrokenDownScrollDistance 
+        										   + GW.scrollState.newScrollTop 
+        										   - GW.scrollState.lastScrollTop)
+        										: 0;
+    GW.scrollState.unbrokenUpScrollDistance = GW.scrollState.newScrollTop < GW.scrollState.lastScrollTop
+        									  ? (  GW.scrollState.unbrokenUpScrollDistance 
+        									     + GW.scrollState.lastScrollTop 
+        									     - GW.scrollState.newScrollTop)
+        									  : 0;
+    GW.scrollState.lastScrollTop = GW.scrollState.newScrollTop;
 }
-addScrollListener(updateScrollState, "updateScrollStateScrollListener", { defer: true });
+addScrollListener(updateScrollState, "updateScrollStateScrollListener", { defer: true, ifDeferCallWhenAdd: true });
 
 /*  Toggles whether the page is scrollable.
  */
@@ -3923,8 +3927,7 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
-
-<link rel="preload" href="/static/css/fonts.css?v=1683311718" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
-<link rel="preload" href="/static/css/default.css?v=1683311162" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/fonts.css?v=1683316773" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/default.css?v=1683318701" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1682784367" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/img/icon/icons.svg" as="image">
