Refactor page toolbar code

--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,12 +1,12 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1683321019"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683340541"></noscript>
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367"></noscript>
+	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1683321019">
+	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683340541">
+	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367">
 
     <!-- JS library with utility functions used in rest of code -->
     <script src="/static/js/utility.js?v=1683216191" defer></script>
     <!-- Misc JS -->
-    <script src="/static/js/misc.js?v=1683317893" defer></script>
+    <script src="/static/js/misc.js?v=1683352064" defer></script>
     <!-- JS library for spawning popups -->
     <script src="/static/js/popups.js?v=1682875599" defer></script>
     <script src="/static/js/popins.js?v=1683213331" defer></script>
@@ -22,7 +22,7 @@
     <!-- JS library for typography rectification -->
     <script src="/static/js/typography.js?v=1680851954" defer></script>
     <!-- Various rewrites and other page modifications -->
-    <script src="/static/js/rewrite.js?v=1683340016" defer></script>
+    <script src="/static/js/rewrite.js?v=1683351458" defer></script>
     <!-- JS library for Tufte-style 'sidenotes' (footnotes popped into the left & right margins on sufficiently-wide screens); much more convenient than floating footnotes & endnotes -->
     <script src="/static/js/sidenotes.js?v=1682292506" defer></script>
     <!-- JS library for client-side transclusion -->
@@ -30,9 +30,9 @@
     <!-- JS library for collapsed sections -->
     <script src="/static/js/collapse.js?v=1683259784" defer></script>
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
-    <script src="/static/js/dark-mode.js?v=1683314428" defer></script>
+    <script src="/static/js/dark-mode.js?v=1683351557" defer></script>
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
-    <script src="/static/js/reader-mode.js?v=1683314436" defer></script>
+    <script src="/static/js/reader-mode.js?v=1683351579" defer></script>
     <!-- JS library for clickable/zoomable images, for images larger than can be displayed in the body: /static/js/image-focus.js -->
     <script src="/static/js/image-focus.js?v=1683215491" defer></script>
     <!-- Command console -->
