--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -56,6 +56,10 @@
 	--GW-collapse-disclosure-button-text-hover-color: #fff;
 	--GW-collapse-in-blockquote-disclosure-button-text-color: #999;
 	--GW-collapse-in-blockquote-disclosure-button-text-hover-color: #888;
+	--GW-collapse-inline-disclosure-button-color: #ccc;
+	--GW-collapse-inline-disclosure-button-hover-color: #999;
+	--GW-collapse-inline-disclosure-button-text-color: #fff;
+	--GW-collapse-inline-disclosure-button-text-hover-color: #fff;
 
     /*  Headings.
      */
@@ -1853,6 +1857,10 @@ body.special-halloween-dark h6 {
 	--GW-collapse-disclosure-button-text-hover-color: #000;
 	--GW-collapse-in-blockquote-disclosure-button-text-color: #8b8b8b;
 	--GW-collapse-in-blockquote-disclosure-button-text-hover-color: #999;
+	--GW-collapse-inline-disclosure-button-color: #5c5c5c;
+	--GW-collapse-inline-disclosure-button-hover-color: #8b8b8b;
+	--GW-collapse-inline-disclosure-button-text-color: #000;
+	--GW-collapse-inline-disclosure-button-text-hover-color: #000;
 
     /*  Headings.
      */
@@ -3927,11 +3935,7 @@ ReaderMode.injectStyleBlock(ReaderMode.styles, "reader-mode-styles");
 //  Activate saved mode, once the <body> element is loaded (and classes known).
 doWhenBodyExists(ReaderMode.setMode);
 </script>
-
-
-
-
-<link rel="preload" href="/static/css/fonts.css?v=1683321019" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
-<link rel="preload" href="/static/css/default.css?v=1683487619" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/fonts.css?v=1683502403" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/css/default.css?v=1683524858" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1682784367" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/img/icon/icons.svg" as="image">
