--- a/css/include/dark-mode-GENERATED.css
+++ b/css/include/dark-mode-GENERATED.css
@@ -55,6 +55,10 @@
 	--GW-collapse-disclosure-button-text-hover-color: #000;
 	--GW-collapse-in-blockquote-disclosure-button-text-color: #8b8b8b;
 	--GW-collapse-in-blockquote-disclosure-button-text-hover-color: #999;
+	--GW-collapse-inline-disclosure-button-color: #5c5c5c;
+	--GW-collapse-inline-disclosure-button-hover-color: #8b8b8b;
+	--GW-collapse-inline-disclosure-button-text-color: #000;
+	--GW-collapse-inline-disclosure-button-text-hover-color: #000;
 
     /*  Headings.
      */
