--- a/include/inlined-foot.html
+++ b/include/inlined-foot.html
@@ -1,10 +1,10 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1683321019">
-	<link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683487619">
-	<link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367">
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/fonts.css?v=1683502403"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/default.css?v=1683524858"></noscript>
+	<noscript><link rel="stylesheet" type="text/css" href="/static/css/links.css?v=1682784367"></noscript>
 
     <!-- JS library with utility functions used in rest of code -->
-    <script src="/static/js/utility.js?v=1683216191" defer></script>
+    <script src="/static/js/utility.js?v=1683493191" defer></script>
     <!-- Misc JS -->
     <script src="/static/js/misc.js?v=1683352064" defer></script>
     <!-- JS library for spawning popups -->
@@ -28,7 +28,7 @@
     <!-- JS library for client-side transclusion -->
     <script src="/static/js/transclude.js?v=1683489207" defer></script>
     <!-- JS library for collapsed sections -->
-    <script src="/static/js/collapse.js?v=1683488675" defer></script>
+    <script src="/static/js/collapse.js?v=1683524963" defer></script>
     <!-- Dark Mode theme switcher (lets users toggle between regular black-on-white CSS, and dark mode) -->
     <script src="/static/js/dark-mode.js?v=1683351557" defer></script>
     <!-- Reader Mode theme switcher (lets users toggle distraction-free ‘reader mode’ on and off) -->
